--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
       <td>2019-2020</td>
       <td>Java Developer at TCS</td>
     </tr>
+     <tr>
+      <td>2020/09- present</td>
+      <td>Java Full Stack Developer at Knowledge Objects</td>
+    </tr>
   </table>
 
 </body>
